--- a/src/lib/i18n/de/common.json
+++ b/src/lib/i18n/de/common.json
@@ -55,6 +55,7 @@
   },
   "http": "Muss mit `http://` oder `https://` beginnen",
   "invalidUrl": "Ungültige URL",
+  "language": "Sprache",
   "location": "Standort",
   "menu": "Menü",
   "name": "Name",
