--- a/src/lib/i18n/fr/common.json
+++ b/src/lib/i18n/fr/common.json
@@ -55,6 +55,7 @@
   },
   "http": "Doit commencer par `http://` ou `https://`.",
   "invalidUrl": "URL invalide",
+  "language": "Langue",
   "location": "Localisation",
   "menu": "Menu",
   "name": "Nom",
