--- a/src/lib/i18n/he/common.json
+++ b/src/lib/i18n/he/common.json
@@ -55,6 +55,7 @@
   },
   "http": "חייב להתחיל עם `http://` או `https://`",
   "invalidUrl": "כתובת אינטרנט לא חוקית",
+  "language": "שפה",
   "location": "מיקום",
   "menu": "תפריט",
   "name": "שם",
