--- a/src/lib/i18n/nl/common.json
+++ b/src/lib/i18n/nl/common.json
@@ -55,6 +55,7 @@
   },
   "http": "Moet beginnen met `http://` of `https://`.",
   "invalidUrl": "Ongeldige URL",
+  "language": "Taal",
   "location": "Locatie",
   "menu": "Menu",
   "name": "Naam",
