--- a/src/lib/i18n/ru/common.json
+++ b/src/lib/i18n/ru/common.json
@@ -55,6 +55,7 @@
   },
   "http": "Должно начинаться с `http://` или `https://`.",
   "invalidUrl": "Недопустимый URL",
+  "language": "Язык",
   "location": "Расположение",
   "menu": "Меню",
   "name": "Имя",
