--- a/src/lib/i18n/uk/common.json
+++ b/src/lib/i18n/uk/common.json
@@ -55,6 +55,7 @@
   },
   "http": "Має починатися з `http://` або `https://`.",
   "invalidUrl": "Неправильна URL-адреса",
+  "language": "Мова",
   "location": "Місцезнаходження",
   "menu": "Меню",
   "name": "Ім'я",
